# somnia-governance-engine

./: .gitignore  LICENSE  README.md
backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/api/: handlers.rs  middleware.rs  mod.rs  routes.rs  websocket.rs
backend/src/auth/: middleware.rs  mod.rs  signature_verification.rs  wallet_auth.rs
backend/src/blockchain/: client.rs  contracts.rs  events.rs  mod.rs  transactions.rs
backend/src/config/: mod.rs
backend/src/governance/: analytics.rs  engine.rs  mod.rs  proposals.rs  voting.rs
backend/src/indexer/: content_indexer.rs  event_processor.rs  mod.rs  search_engine.rs
backend/src/ipfs/: cache.rs  client.rs  content_types.rs  mod.rs  validation.rs
backend/src/performance/: benchmarking.rs  mod.rs  monitoring.rs  optimization.rs
backend/src/utils/: errors.rs  helpers.rs  mod.rs  validation.rs
contracts/: .gitignore  foundry.toml
contracts/script/: Deploy.s.sol  SecureDeploy.s.sol
contracts/src/: GovernanceHub.sol  GovernanceToken.sol  SimpleVoting.sol  TimelockController.sol
contracts/src/interfaces/: IGovernanceHub.sol  ISimpleVoting.sol
contracts/test/: Governance.t.sol  Integration.t.sol
docs/: API_GUIDE.md  ARCHITECTURE_OVERVIEW.md  GOVERNANCE_BEST_PRACTICES.md  INTEGRATION_EXAMPLES.md  README.md  SMART_CONTRACTS_GUIDE.md  SUMMARY.md  api-deployment.md  custom-contracts.md
