[package]
name = "somnia-governance-engine"
version = "0.1.0"
edition = "2021"

[dependencies]
# Web framework and HTTP
axum = { version = "0.8.4", features = ["ws", "macros", "multipart"] }
tokio = { version = "1.47.1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6.6", features = ["cors", "trace"] }
hyper = { version = "1.7.0", features = ["full"] }

# Serialization
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"

# Blockchain interaction
ethers = { version = "2.0.14", features = ["ws", "rustls"] }
ethers-core = "2.0.14"
ethers-providers = "2.0.14"
ethers-contract = "2.0.14"

# IPFS integration
ipfs-api-backend-hyper = "0.6"
cid = "0.11.1"
libipld = "0.16"
multihash = "0.19.3"

# Cryptography and authentication
secp256k1 = { version = "0.31.1", features = ["recovery", "rand"] }
sha3 = "0.10.8"
hex = "0.4.3"

# Async utilities
futures = "0.3.31"
async-trait = "0.1.89"

# Random number generation
rand = "0.9"

# Caching
lru = "0.16.1"

# Error handling
thiserror = "2.0.16"
anyhow = "1.0.99"

# Logging and metrics
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
prometheus = "0.14.0"

# Configuration
config = "0.15.15"
dotenvy = "0.15.7"

# Time and UUID
chrono = { version = "0.4.42", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# URL parsing
url = "2.5"

# Validation
validator = { version = "0.20.0", features = ["derive"] }

# Testing (dev dependencies)
[dev-dependencies]
tokio-test = "0.4.4"
mockall = "0.13.1"
tempfile = "3.22.0"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
